fixed scalling on small devices

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -4,7 +4,7 @@ main {
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding-top: 5rem; }
+  padding-top: 3rem; }
 
 @media only print {
   main {
@@ -15,7 +15,7 @@ main {
 
 @media only screen and (min-width: $cutoff) {
   main {
-    padding-top: 6.25rem; } }
+    padding-top: 5.25rem; } }
 
 .row {
   width: auto;
